--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "nodemailer": "^6.4.11",
     "request": "^2.88.2"
   },
   "devDependencies": {
